Alterado tamanho do painel de plugin e adicionado a opção de fecha-lo

--- a/build.xml
+++ b/build.xml
@@ -106,7 +106,7 @@
         
         <for param="recurso.dir">
             <path>
-                <dirset dir="${dist.dir}" includes="*" excludes="plugins"/>
+                <dirset dir="${dist.dir}" includes="*"/>
             </path>
             <sequential>
                 <local name="recurso.dir.basename"/>
